k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: upcoach
  labels:
    name: upcoach
    environment: production
